testsuite/gnatprove/tests/SA17-076__flow_aggregate/test.out
test.adb:16:04: error: "ER" is not allowed in SPARK (due to box notation without default or relaxed initialization)
test.adb:16:04: error: violation of pragma SPARK_Mode at test.adc:1
test.adb:16:29: error: box notation without default or relaxed initialization is not allowed in SPARK (SPARK RM 4.3(1))
test.adb:16:29: error: violation of pragma SPARK_Mode at test.adc:1
gnatprove: error during flow analysis and proof
